new german translations

--- a/Resources/translations/de/donor.yml
+++ b/Resources/translations/de/donor.yml
@@ -20,6 +20,7 @@ donor-address-location-field: Provinz
 donor-field-amount: 'Spendenbetrag: '
 donor-field-amount-relief: Abzüge
 donor-field-lot-relief: Abschnitt
+donor-field-numproj: 'Aportes realizados el %s'
 personal-field-donor_name: 'Nachname '
 personal-field-donor_surname: 'Erster Vorname'
 personal-field-donor_surname2: 'Zweiter Vorname'
