--- a/Resources/translations/de/feed.yml
+++ b/Resources/translations/de/feed.yml
@@ -1,4 +1,5 @@
 ---
+feed-admin-action: 'El admin %USER% ha %ACTION%'
 feed-admin-invest-cancelled: 'Der Administrator %ADMIN% hat den Beitrag von %USER% von %AMOUNT% durch %METHOD% (Id: %INVEST%) zum "%PROJECT%" am %DATE% storniert'
 feed-admin-invest-cancelled-pool: 'Der Admin %ADMIN% hat den Beitrag von %USER% von %AMOUNT% über %METHOD% (Id: %INVEST%) am %DATE% für das "%PROJECT%" storniert und in die Geldbörse zurückgegeben'
 feed-admin-invest-cancelled-pool-subject: 'Aufladen der Geldbörse manuell storniert (admin)'
@@ -18,6 +19,10 @@ feed-admin-new_project: 'Automatisches Publizieren eines Projekts'
 feed-admin-newsletter-activate: 'Admin %USER% hat den Versand des Newsletters begonnen %ID%: %SUBJECT%'
 feed-admin-newsletter-activate-failed: 'Automatischer Versand des Newsletters %ID%: %SUBJECT% durch den Admin %USER% ist fehlgeschlagen'
 feed-admin-newsletter-activate-subject: 'Newsletter freigeschaltet (admin)'
+feed-admin-project-new: 'Usuario crea nuevo proyecto'
+feed-admin-project-created: '%USER% ha creado un nuevo proyecto, %PROJECT%'
+feed-admin-project-call: 'nuevo proyecto asignado a convocatoria'
+feed-admin-project-call-desc: 'Nuevo proyecto %PROJECT% aplicado a la convocatoria %CALL%'
 feed-admin-project-action: 'Aktion auf ein Projekt durch den Admin'
 feed-admin-project-published-ko: 'Der Admin %USER% hat das %PROJECT% Projekt nicht in den <span class="red">Status Kampagne</span>>> versetzt'
 feed-admin-project-published-ok: 'Admin %USER% hat das Projekt %PROJECT% im Status <span class="red">In Kampagne</span> veröffentlicht'
@@ -25,6 +30,7 @@ feed-blog-comment: 'Sie haben einen <span class="green">Kommentar </span> in den
 feed-invest: 'Hat %AMOUNT% zum Projekt beigetragen %PROJECT%'
 feed-invest-by: 'Beitrag %s'
 feed-invest-pool: 'Sie haben %AMOUNT% in Ihre virtuelle Brieftasche geladen'
+feed-invest-donate: 'Has donado a la Fundación %AMOUNT%'
 feed-mailing-massive: 'Massenversand (cron)'
 feed-mailing-massive-completed: 'Massenversand ist abgeschlossen[%ID%][%SUBJECT%]'
 feed-message-support-response: 'Neue Zusammenarbeit mit %TITLE% für das Projekt %PROJECT%'
@@ -37,6 +43,10 @@ feed-new_support: 'Es wurde eine neue <span class="green">Kollaboration</span> i
 feed-new-support: 'Es wurde eine neue <span class="green">Kollaboration</span> im Projekt %PROJECT% mit dem Titel"%TITLE%" veröffentlicht'
 feed-new_update: '%USER% Neuer Post in %BLOG% über %PROJECT%'
 feed-new_user: 'Neuer Benutzer in Goteo %s'
+feed-new-story: 'Nueva historia exitosa en portada (admin)'
+feed-story-published: 'Publicado una historia exitosa'
+feed-deleted-story: 'Historia exitosa borrada'
+feed-story-deleted: 'Borrado una historia exitosa'
 feed-project-archived: 'archiviertes Projekt (auto)'
 feed-project-ending: 'Projekt nähert sich dem Abschluss der Runde (auto)'
 feed-project-failed: 'erfolglos abgelaufen'
@@ -73,3 +83,12 @@ feed-project-ready-ko: 'Fehler bei %USER% beim Senden des Projektes %PROJECT% an
 feed-project-ready-ok: '%USER% hat das Projekt %PROJECT% an <span class="red">Revision</span> gesendet'
 feed-project-new-post: 'Benutzer veröffentlicht eine Neuigkeit in seinem Projekt (Dashboard)'
 feed-project-post-published: '%USER% hat einen neuen Beitrag mit dem Titel "%TITLE%" in %BLOG% zum Projekt %PROJECT% veröffentlicht'
+feed-blog-new-post: 'Nuevo post en el blog general (admin)'
+feed-blog-post-action: 'El admin %USER% ha %ACTION% en el blog general el post "%TITLE%"'
+feed-blog-post-deleted: 'Post eliminado del blog general (admin)'
+feed-admin-has-done: 'El admin %ADMIN% ha %ACTION% al usuario %USER%'
+feed-admin-has-modified: 'El admin %ADMIN% ha %ACTION% (%PROPERTY%) al usuario %USER%'
+feed-admin-impersonated: 'Usuario suplantado'
+feed-admin-impersonated-action: 'suplantado'
+feed-admin-user-modification: 'Usuario modificado por admin'
+feed-admin-modified-action: 'modificado'
