--- a/Resources/translations/de/home.yml
+++ b/Resources/translations/de/home.yml
@@ -10,7 +10,7 @@ home-menu-matchfunding: 'Matchfunding'
 home-menu-our-foundation: 'Unsere Stiftungsorganisation'
 home-search-keyword: 'Suche mit Stichwörtern'
 home-search-location: 'Bundesland / Provinz, Stadt, Plz'
-home-projects-title: 'Einige unserer Prohjekte'
+home-projects-title: 'Einige unserer Projekte'
 home-projects-outdate: 'Dringend'
 home-projects-team-favourites: 'Favoriten des Teams'
 home-projects-near: 'In Ihrer Nähe'
@@ -65,10 +65,14 @@ home-matchfunding-details-transparent: 'Transparenz'
 home-matchfunding-details-legacy: 'Vererbung'
 home-matchfunding-details-learning: 'Lernen'
 home-matchfunding-details-economy: 'Wirtschaft/Beschäftigung'
+home-matchfunding-call-to-action-title-pitch: 'Pitch!'
+home-matchfunding-call-to-action-description-pitch: '¿Te interesa acceder a fondos para complementar las donaciones a tu campaña?'
+home-matchfunding-call-to-action-action-pitch: 'PRESÉNTATE'
 home-matchfunding-call-to-action-title: 'Den Wandel vorantreiben'
 home-matchfunding-call-to-action-description: 'Treten Sie unserem Netzwerk von Gemeinden, Stiftungen und Institutionen bei'
 home-matchfunding-call-to-action-action: 'ICH WILL MATCH'
 home-foundation-title: 'Stiftung Goteo'
+home-foundation-subtitle: 'Te recibimos con los datos abiertos'
 home-foundation-story-label: 'Erfahrungen'
 home-foundation-stats-title: 'Transparent'
 home-foundation-stats-description: 'Klarer, das Wasser. Alle unsere Daten zur Einsichtnahme verfügbar'
@@ -100,3 +104,4 @@ home-menu-sidebar-channels: 'Entdecken Sie die Kanäle von Goteo'
 home-menu-sidebar-header-title: 'Finden Sie bei Goteo das, was sie suchen'
 home-menu-toggle-label: 'Ich möchte'
 home-channels-title: 'Kanäle von Goteo'
+home-action-show-table: 'Ver todas'
