--- a/Resources/translations/de/labels.yml
+++ b/Resources/translations/de/labels.yml
@@ -169,3 +169,5 @@ word-lb-list: Auflistung
 worth-lb: 'Wertelevel'
 worth-lb-edit: 'Level bearbeiten'
 worth-lb-list: Auflistung
+stats-lb: Stats & data
+stories-lb: 'Historias de usuario'
