--- a/Resources/translations/de/dashboard.yml
+++ b/Resources/translations/de/dashboard.yml
@@ -69,12 +69,14 @@ dashboard-menu-projects-commons: Belohnungen
 dashboard-menu-projects-contract: Vertrag
 dashboard-menu-projects-social-commitment: 'Soziales Engagement'
 dashboard-menu-projects-messegers: Teilnehmer
+dashboard-menu-projects-recipients: destinatarios
 dashboard-menu-projects-preview: 'öffentliche Seite'
 dashboard-menu-projects-rewards: Unterstützer
 dashboard-menu-projects-summary: Zusammenfassung
 dashboard-menu-projects-supports: Kooperationen
 dashboard-menu-projects-updates: Neuigkeiten
 dashboard-menu-projects-widgets: Widget
+dashboard-menu-projects-story: 'Mi historia'
 dashboard-menu-review_board: Rezension/Beurteilung
 dashboard-menu-translate_board: Übersetzung
 dashboard-menu-translates: 'Meine Übersetzungen'
@@ -210,6 +212,8 @@ all-files-uploaded: "Alle Dateien wurden erfolgreich hochgeladen"
 uploaded-ok: "Hochladen erfolgreich"
 publish-confirm-yes: "Möchten Sie diesen Beitrag veröffentlichen?"
 publish-confirm-no: "Möchten Sie die Veröffentlichung dieses Beitrags rückgängig machen?"
+active-confirm-yes: "Quieres activar esta entrada?"
+active-confirm-no: "Quieres desactivar esta entrada?"
 dashboard-project-support-empty: 'Es gibt noch keine Anfragen für eine Zusammenarbeit.'
 dashboard-project-support-responses: Antworten
 dashboard-project-support-no-responses: 'Noch keine Antworten.'
@@ -235,8 +239,17 @@ dashboard-message-donors-pending: 'ausstehender Status'
 dashboard-message-donors-fulfilled: 'abgeschlossen'
 dashboard-message-donors-error: 'Keine gültigen Empfänger, die Nachricht kann nicht versandt werden'
 dashboard-message-donors-total: '%s Mitfinanzierer'
+dashboard-message-donors-filtered-by: 'contienen: %s'
 dashboard-message-no-message: 'Sie haben noch keine Nachrichten.'
 dashboard-message-threads: 'Sie haben %s Nachrichten-Threads'
+dashboard-mails-no-mails: 'No tienes ninguna comunicación enviada todavía.'
+dashboard-mail-mailing: 'Comunicaciones'
+dashboard-mail-sent-mails: 'Comunicaciones enviadas a %s'
+dashboard-mail-sent-mails-desc: 'Estas son las últimas comunicaciones enviadas a tu email personal.<br><em>NOTA: Las comunicaciones antiguas se eliminan automáticamente.</em>'
+dashboard-rewards-my-invests: 'Mis donaciones'
+dashboard-rewards-no-invests: 'No has hecho ninguna donación todavía.'
+dashboard-rewards-invests-totals: 'Este es tu historial de donaciones y recompensas.<br>Has realizado %TOTAL% aportaciones por un valor total de <strong>%RAISED%</strong>, de esta cantidad se te han devuelto <strong>%RETURNED%</strong> (a tu monedero virtual o a tu cuenta bancaria) debido a proyectos que no han alcanzado su objetivo.'
+dashboard-rewards-invests-wallet: 'Además, en tu monedero virtual tienes <strong>%AMOUNT%</strong> que puedes usar en cualquier momento.'
 dashboard-translate-profile: 'Profil übersetzen'
 dashboard-translate-profile-desc: 'Sie übersetzen Ihr persönliches Profil nach %LANG%. Benutzer, die Ihr persönliches Profil in dieser Sprache besuchen, sehen diese Übersetzung. Die anderen Sprachen zeigen die <a href="%URL%">Standarddaten</a>, es sei denn, ihnen ist auch eine Übersetzung zugeordnet.'
 dashboard-translate-profile-ok: 'Profil richtig übersetzt nach %s'
@@ -252,10 +265,17 @@ dashboard-translate-overview: 'Übersetzen der Grund-Daten Kosten des Projekts'
 dashboard-translate-costs: 'Die Kosten des Projekts übersetzen'
 dashboard-translate-rewards: 'Die Belohnungen für das Projekt übersetzen'
 dashboard-translate-supports: 'Projektkooperationen übersetzen'
+dashboard-translate-story: 'Traducir mi historia en Goteo'
 dashboard-project-support-translate-ok: 'Supporteintrag %TITLE% erfolgreich nach %LANG% übersetzt'
 dashboard-project-support-translating: 'Sie übersetzen dieses Posting nach %LANG%. Die Originalsprache ist %ORIGINAL%.'
 dashboard-project-saved: 'Projekt erfolgreich aktualisiert'
 dashboard-project-is-dead: 'Das Projekt ist archiviert und kann nicht bearbeitet werden'
+dashboard-project-mailing-view: 'Mensajes enviados'
+dashboard-project-mailing-ago: 'Enviado hace %s'
+dashboard-project-mailing-sending: 'Enviando mensaje %s'
+dashboard-project-mailing-percent_success: 'Porcentaje de mensajes ya enviados'
+dashboard-project-mailing-percent_opened: 'Porcentaje de usuarios que han confirmado recepción'
+dashboard-project-mailing-write_again: 'Escribir a todos'
 dashboard-project-not-alive-yet: 'Dieser Bereich ist verfügbar, wenn Ihr Projekt als Kampagne aufgenommen wird'
 dashboard-project-not-funded-yet: 'Dieser Bereich steht Ihnen zur Verfügung, wenn Ihr Projekt die Kampagne erfolgreich abgeschlossen hat'
 dashboard-project-reward-cannot: 'Es können keine neuen Belohnungen eingeführt werden. Während der Kampagne ist es möglich, neue Belohnungen einzuführen (nicht aber bestehende zu löschen)'
