--- a/Resources/translations/de/mailer.yml
+++ b/Resources/translations/de/mailer.yml
@@ -3,6 +3,11 @@ mailer-baja: 'Wenn Sie keine weiteren Updates von Goteo.org erhalten möchten, k
 mailer-disclaimer: 'Goteo ist eine Plattform zur Unterstützung zivilgesellschaftlicher, ethischer und offener Projekte von Bürgern, Unternehmern, sozialen Innovatoren und Kreativen, die wichtiges Wissen für die Gesellschaft teilen. '
 mailer-sinoves: 'Wenn Sie diese Nachricht nicht lesen können, benutzen Sie bitte diesen <a href="%s">Link</a>'
 newsletter-block: 'Möchten Sie den Newsletter von Goteo nicht weiter erhalten?<br> <a href="%s">Abbestellen</a>.'
+newsletter-subscribe: 'Suscribirse al boletín'
+newsletter-unsubscribe: 'Cancelar la suscripción al boletín'
+newsletter-unsubscribe-cancel: 'Te has equivocado? <a href="%s">Vuelve a suscribirte</a>'
+newsletter-subscribe-cancel: 'No querías suscribirte? <a href="%s">cancela tu suscripción</a>'
+subscribe-request-success: 'Felicidades! Te has suscrito a nuestro boletín (%s).'
 unsubscribe-request-success: 'Sie haben Ihr Newsletter-Abonnement gekündigt (%s).'
 mailer-from: Von
 mailer-to: An
