--- a/Resources/translations/de/project.yml
+++ b/Resources/translations/de/project.yml
@@ -121,6 +121,7 @@ project-create-social-select-field: 'Wählen Sie Ihr soziale Engagement'
 project-create-social-select-alert: "<strong>GOTEO-TASTIC!!</strong><p>Bei Goteo brauchen wir ein soziales Engagement, denken Sie darüber nach, was es ist und wählen Sie eines aus! \n</p>"
 project-create-social-text-field: 'Erklären Sie in wenigen Worten, woraus dieses soziale Engagement besteht'
 project-create-social-text-alert: '<strong>TROPPO BELLO!!</strong><p>Jetzt müssen Sie uns ein wenig über das Engagement, das Sie gewählt haben, erzählen.</p>'
+project-create-location-text-alert: '<strong>COOL!!</strong><p>Ya casi estamos! Piensa dónde va a estar localizado tu proyecto</p>'
 project-create-terms-field: 'Ich habe die <a data-toggle="modal" data-target="#termsModal" href="">Bedingungen</a> und Anforderungen zur Erstellung eines Projekts in Goteo sowie die <a target="_blank" href="/legal/privacy">Datenschutzrichtlinien</a> der Plattform gelesen, verstanden und akzeptiere sie.'
 project-create-save-button: 'Speichern und fortsetzen'
 project-create-save-alert: '<strong>GROSSARTIG!!</strong><p>Nachdem wir nun eine Vorstellung von Ihrem Projekt haben, gehen Sie mit einem erweiterten Formular über Ihr Projekt zum nächsten Schritt über.</p>'
