--- a/Resources/translations/de/public_profile.yml
+++ b/Resources/translations/de/public_profile.yml
@@ -18,5 +18,9 @@ profile-widget-user-header: Benutzer
 profile-worth-title: 'hierzu beigetragen:'
 profile-worthcracy-title: Position
 profile_patron-invest_on-header: 'Ich habe auch kofinanziert'
+profile-stats-title: 'Actividad en Goteo'
+profile-stats-projects: 'Campañas'
+profile-stats-invests: 'Donaciones'
+profile-stats-collaborations: 'Contribuciones'
 user-message-restricted: 'Kann nur von seinem Kofinanzierern Nachrichten empfangen'
 user-message-send_personal-header: 'Sende eine Nachricht an den Benutzer'
