--- a/Resources/translations/de/widget.yml
+++ b/Resources/translations/de/widget.yml
@@ -13,3 +13,7 @@ call-tagmark-open: 'Open Call'
 call-tagmark-active: 'Kampagne ist aktiv!'
 call-tagmark-completed: 'Kampagne ist geendet.'
 call-tagmark-archived: 'Archivierter Aufruf'
+call-short-tagmark-open: 'Abierta'
+call-short-tagmark-active: 'Activa!'
+call-short-tagmark-completed: 'Finalizada'
+call-short-tagmark-archived: 'Archivada'
